--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 body  {
   background : #dad5c1;
-  font-family : "Helvetica","Arial","Tahoma";
+  text-align : center;
   }
+table {
+  text-align : center;
+}
 h3  {
   text-align : center;
   text-decoration : underline;
@@ -16,6 +19,7 @@ img {
   width : auto;
   } 
 #wrapper  {
+  text-align : center;
   margin : 0 auto;
   max-width : 980px;
   width : 96%;
@@ -24,33 +28,40 @@ img {
   border-radius : 10px;
   }
 header  {
+  width : 96%;
   padding : 5px;
   text-align : center;
   }
 nav {
   text-align : center;
   background : #a09885;
-  padding : 0;
-  margin : 0 0;
+  padding : 8px;
   border-radius : 10px;
   }
 nav ul {
   text-align : center;
   list-style : none;
-  margin-left : 7%;
-  padding : 0;
+  padding : 5px;
   }
-nav li a {
+nav li {
+  text-align : center;
   color : #000000;
-  display : block;
-  float : left;
-  padding : 20px;
+  display:inline;
+  padding : 10px;
   text-decoration : none;
   }
-nav a:hover nav li:active a {
+nav a {
+  text-align : center;
+  color : #000000;
+  padding : 1%;
+  text-decoration : none;
+  }
+nav a:hover {
   background-color : #322f2c;
   color : #ffffff;
+  border-radius : 10px;
   }
+
 .clear  {
   clear : both;
   }
@@ -61,6 +72,27 @@ nav a:hover nav li:active a {
   padding-top : 5px;
   height : 50px;
   width : 50px;
+  max-width : 22%;
+  height : auto;
+  width : auto;
+  }
+#social ul {
+  text-align : center;
+  list-style : none;
+  padding : 0px;
+  }
+#social li {
+  text-align : center;
+  color : #000000;
+  display:inline;
+  padding : 0px;
+  text-decoration : none;
+  }
+#social a {
+  text-align : center;
+  color : #000000;
+  padding : 0px;
+  text-decoration : none;
   }
 .left-col {
   background : #dad5c1;
@@ -75,23 +107,26 @@ nav a:hover nav li:active a {
   float : right;
   margin-top : 2%;
   border-radius : 10px;
+}
 .vid {
   position : relative;
   padding-bottom : 56.25%;
   padding-top : 30px;
-  height : 0;
   overflow : hidden;
+  height : 0;
   }
 .vid iframe {
   position : absolute;
   top : 0;
   left : 0;
-  width : 100%;
-  height : 100%;
+  background-color : #ff0000;
+  background : #ff0000;
   }
+.dogVideo {
+}
 footer {
   background : #a09885;
-  border-radius : 50px;
+  border-radius : 10px;
   }
   
 /*---Media---*/
